--- a/.virtual_documents/Untitled.ipynb
+++ b/.virtual_documents/Untitled.ipynb
@@ -11,4 +11,18 @@ Y = [5, 6, 7, 8]
 plt.plot(X, Y) 
 
 
+oscar_movies = [
+    "The Dark Kinght",
+    "The Hurt Locker",
+    "The King's Speech",
+    "The Artist",
+    "Argo"
+]
+years = [2008, 2009, 2010, 2011, 2012]
+oscar_revenue = [1005, 170,427, 133, 232]
+
+# Plot
+plt.plot(years, oscar_revenue)
+
+
 
