Starting Bar Graphs

--- a/code.ipynb
+++ b/code.ipynb
@@ -258,8 +258,18 @@
     "2. plt.bar(x, height) - Vertical Bar Chart\n",
     "3. plt.barh(y, width) - Horizontal Bar Chart\n",
     "4. plt.scatter(x, y) - Scatter Plot\n",
-    "5. plt "
+    "5. plt.py(data) - Pie Chart\n",
+    "6. plt.hist(data, bins) - Histogram\n",
+    "7. plt.boxplot(data) - Box Plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de3da1b-1a12-44ba-b919-4f10af4e0b31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
