Horizontal Bar Charts

--- a/code.ipynb
+++ b/code.ipynb
@@ -380,6 +380,28 @@
     "plt.xticks(x, years) # to set the years as the labels\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa2bf635-61db-4d1c-b654-d2f299619425",
+   "metadata": {},
+   "source": [
+    "# Horizontal Bar Chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98b73392-c4ba-4d1a-ad03-ff1001af9686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oscar_movies = [\"The Dark Kinght\", \"The Hurt Locker\", \"The King's Speech\", \"The Artist\", \"Argo\"]\n",
+    "years = [2008, 2009, 2010, 2011, 2012]\n",
+    "oscar_revenue = [1005, 170,427, 133, 232]\n",
+    "\n",
+    "plt.barh(oscar_movies, oscar_"
+   ]
   }
  ],
  "metadata": {
