--- a/.virtual_documents/code.ipynb
+++ b/.virtual_documents/code.ipynb
@@ -159,3 +159,30 @@ plt.legend()
 
 plt.xticks(x, years) # to set the years as the labels
 plt.show()
+
+
+
+
+
+oscar_movies = ["The Dark Kinght", "The Hurt Locker", "The King's Speech", "The Artist", "Argo"]
+years = [2008, 2009, 2010, 2011, 2012]
+oscar_revenue = [1005, 170,427, 133, 232]
+
+plt.barh(oscar_movies, oscar_revenue)
+plt.xlabel("Revenue")
+plt.ylabel("Movie Names")
+
+
+
+
+
+people = ["Person A", "Person B", "Person C", "Person D", "Person E",
+          "Person F", "Person G", "Person H", "Person I", "Person J"]
+age = [22, 25, 30, 35, 40, 45, 50, 55, 60, 65]
+blood_pressure = [110, 115, 120, 122, 125, 130, 135, 123, 145, 150]
+
+
+plt.scatter
+
+
+
